chore: request sent page

--- a/app/app.css
+++ b/app/app.css
@@ -83,3 +83,12 @@ body {
 .datepicker-light-mode .react-datepicker {
   color-scheme: light !important;
 }
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
